--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@ function getCurrentUserRole(){
 
     console.log('getCurrentUserRole: Checking role for', currentAuthUser.email);
     console.log('getCurrentUserRole: D.users count:', D.users ? D.users.length : 0);
+    console.log('getCurrentUserRole: user_metadata:', JSON.stringify(currentAuthUser.user_metadata));
     if(D.users && D.users.length > 0) {
         console.log('getCurrentUserRole: D.users:', JSON.stringify(D.users.map(function(u){ return {email:u.email, role:u.role}; })));
     }
@@ -373,27 +374,22 @@ function getCurrentUserRole(){
         return user.role;
     }
 
-    // Check Supabase user metadata for role
+    // Check Supabase user metadata for role (set during invite)
     if(currentAuthUser.user_metadata && currentAuthUser.user_metadata.role){
         console.log('getCurrentUserRole: Found in user_metadata:', currentAuthUser.user_metadata.role);
         return currentAuthUser.user_metadata.role;
     }
 
-    // If no users exist in D.users yet, treat as owner (first user sets up system)
+    // ONLY grant owner if D.users is empty AND there's no role in metadata
+    // This means this is the very first user setting up the system
     if(!D.users || D.users.length === 0){
-        console.log('getCurrentUserRole: No users in D.users, defaulting to owner');
+        console.log('getCurrentUserRole: No users in D.users and no metadata role, defaulting to owner (first user)');
         return 'owner';
     }
 
-    // Check if there are NO owners in D.users - if so, make this user owner
-    var hasOwner = D.users.some(function(u){ return u.role === 'owner'; });
-    if(!hasOwner){
-        console.log('getCurrentUserRole: No owner exists in D.users, granting owner role');
-        return 'owner';
-    }
-
-    // Default to employee for safety
-    console.log('getCurrentUserRole: Defaulting to employee');
+    // Default to employee for safety - if user isn't in D.users and has no metadata role,
+    // they're likely a new employee whose record hasn't synced yet
+    console.log('getCurrentUserRole: Defaulting to employee (not found in D.users, no metadata role)');
     return 'employee';
 }
 
@@ -3463,7 +3459,7 @@ function renderIngs(c,s){
                     html+='<span style="color:#a0aec0;font-size:calc(11px * var(--font-scale))">Min: '+ing.minQty+' '+ing.defUnit+'</span>';
                     html+='<span style="color:#a0aec0;font-size:calc(11px * var(--font-scale))">On Hand: '+onHand+'</span>';
                     html+='<span style="color:'+statusColor+';font-size:calc(11px * var(--font-scale));font-weight:600;min-width:40px;text-align:right">'+(diff>=0?'+':'')+diff+'</span>';
-                    html+='<button class="btn btn-s btn-sm" onclick="editIng('+ing.id+')">✏️</button>';
+                    if(permissions.ingredients.edit()) html+='<button class="btn btn-s btn-sm" onclick="editIng('+ing.id+')">✏️</button>';
                     html+='</div></div>';
                 });
             }
@@ -3484,7 +3480,7 @@ function renderIngs(c,s){
                 html+='<span style="color:#a0aec0;font-size:calc(11px * var(--font-scale))">Min: '+ing.minQty+' '+ing.defUnit+'</span>';
                 html+='<span style="color:#a0aec0;font-size:calc(11px * var(--font-scale))">On Hand: '+onHand+'</span>';
                 html+='<span style="color:'+statusColor+';font-size:calc(11px * var(--font-scale));font-weight:600;min-width:40px;text-align:right">'+(diff>=0?'+':'')+diff+'</span>';
-                html+='<button class="btn btn-s btn-sm" onclick="editIng('+ing.id+')">✏️</button>';
+                if(permissions.ingredients.edit()) html+='<button class="btn btn-s btn-sm" onclick="editIng('+ing.id+')">✏️</button>';
                 html+='</div></div>';
             });
         }
@@ -3655,7 +3651,19 @@ function editIng(id){
     html+='<div class="form-g"><label class="form-l">Default Unit</label><select id="edit-unit" class="form-i">';
     getSortedUnits().forEach(function(u){html+='<option value="'+u.abbr+'"'+(u.abbr===ing.defUnit?' selected':'')+'>'+u.name+' ('+u.abbr+')</option>';});
     html+='</select></div>';
-    html+='<div class="form-g" style="padding:12px;background:rgba(253,203,110,.1);border-radius:8px;border:1px solid rgba(253,203,110,.3)"><label style="display:flex;align-items:center;gap:8px;cursor:pointer"><input type="checkbox" id="edit-standalone"'+(ing.standalone?' checked':'')+' onchange="toggleStandaloneFields()"><span style="font-size:calc(12px * var(--font-scale));color:#fdcb6e;font-weight:600">⭐ Standalone Item</span></label><div class="card-s" style="margin-top:4px">Track this item independently with its own minimum quantity</div></div>';
+    // Storage to Recipe conversion
+    var existingConv=D.conversions?D.conversions.find(function(c){return c.ingId===id;}):null;
+    html+='<div class="form-g" style="padding:12px;background:rgba(108,92,231,.1);border-radius:8px;border:1px solid rgba(108,92,231,.3)"><label style="display:flex;align-items:center;gap:8px;cursor:pointer"><input type="checkbox" id="edit-has-conversion"'+(existingConv?' checked':'')+' onchange="toggleEditConversionFields()"><span style="font-size:calc(12px * var(--font-scale));color:#6c5ce7;font-weight:600">📐 Storage → Recipe Conversion</span></label><div class="card-s" style="margin-top:4px">Define how storage units convert to recipe units (e.g., 1 bottle = 25 fl oz)</div></div>';
+    html+='<div id="edit-conversion-wrap" style="display:'+(existingConv?'block':'none')+';margin-top:8px;padding:12px;background:rgba(0,0,0,.2);border-radius:8px">';
+    html+='<div style="display:flex;gap:8px;align-items:center;flex-wrap:wrap">';
+    html+='<span style="color:#a0aec0;font-size:calc(11px * var(--font-scale))">1</span>';
+    html+='<input type="text" id="edit-storage-unit" class="form-i" placeholder="bottle" value="'+(existingConv?existingConv.storageUnit:'')+'" style="width:80px;font-size:calc(11px * var(--font-scale))">';
+    html+='<span style="color:#a0aec0;font-size:calc(11px * var(--font-scale))">=</span>';
+    html+='<input type="number" id="edit-conv-factor" class="form-i" placeholder="25" value="'+(existingConv?existingConv.factor:'')+'" style="width:60px;font-size:calc(11px * var(--font-scale))">';
+    html+='<span style="color:#6c5ce7;font-size:calc(11px * var(--font-scale));font-weight:600">'+ing.defUnit+'</span>';
+    html+='</div></div>';
+    // Standalone option
+    html+='<div class="form-g" style="padding:12px;background:rgba(253,203,110,.1);border-radius:8px;border:1px solid rgba(253,203,110,.3);margin-top:12px"><label style="display:flex;align-items:center;gap:8px;cursor:pointer"><input type="checkbox" id="edit-standalone"'+(ing.standalone?' checked':'')+' onchange="toggleStandaloneFields()"><span style="font-size:calc(12px * var(--font-scale));color:#fdcb6e;font-weight:600">⭐ Standalone Item</span></label><div class="card-s" style="margin-top:4px">Track this item independently with its own minimum quantity</div></div>';
     html+='<div class="form-g" id="min-qty-wrap" style="display:'+(ing.standalone?'block':'none')+'"><label class="form-l">Minimum Required Quantity</label><input type="number" id="edit-minqty" class="form-i" value="'+(ing.minQty||0)+'" placeholder="0"></div>';
     html+='<div class="form-g" id="auto-shop-wrap" style="display:'+(ing.standalone?'block':'none')+'"><label style="display:flex;align-items:center;gap:8px;cursor:pointer"><input type="checkbox" id="edit-autoshop"'+(ing.autoShop?' checked':'')+'><span style="font-size:calc(11px * var(--font-scale));color:#00b894">🛒 Auto-add to Shopping List when below minimum</span></label></div>';
     html+='<div style="display:flex;gap:8px;margin-top:16px"><button class="btn btn-s" onclick="closeModal()" style="flex:1">Cancel</button><button class="btn btn-p" onclick="saveIng('+id+')" style="flex:1">Save</button></div>';
@@ -3670,6 +3678,12 @@ function toggleStandaloneFields(){
     var autoShopWrap=document.getElementById('auto-shop-wrap');
     minWrap.style.display=cb.checked?'block':'none';
     if(autoShopWrap) autoShopWrap.style.display=cb.checked?'block':'none';
+}
+
+function toggleEditConversionFields(){
+    var cb=document.getElementById('edit-has-conversion');
+    var wrap=document.getElementById('edit-conversion-wrap');
+    wrap.style.display=cb.checked?'block':'none';
 }
 
 function updateEditSubArea(){
@@ -3698,6 +3712,39 @@ function saveIng(id){
     ing.standalone=document.getElementById('edit-standalone').checked?1:0;
     ing.minQty=+document.getElementById('edit-minqty').value||0;
     ing.autoShop=document.getElementById('edit-autoshop').checked?1:0;
+
+    // Handle conversion
+    var hasConv=document.getElementById('edit-has-conversion').checked;
+    var existingConvIdx=D.conversions?D.conversions.findIndex(function(c){return c.ingId===id;}):-1;
+
+    if(hasConv){
+        var storageUnit=document.getElementById('edit-storage-unit').value.trim();
+        var factor=+document.getElementById('edit-conv-factor').value;
+        if(storageUnit && factor){
+            if(existingConvIdx>=0){
+                // Update existing conversion
+                D.conversions[existingConvIdx].storageUnit=storageUnit;
+                D.conversions[existingConvIdx].factor=factor;
+                D.conversions[existingConvIdx].recipeUnit=ing.defUnit;
+                changeLog.conversions.add(D.conversions[existingConvIdx].id);
+            }else{
+                // Create new conversion
+                if(!D.conversions)D.conversions=[];
+                var maxConvId=D.conversions.length?Math.max.apply(null,D.conversions.map(function(c){return c.id;})):0;
+                var newConv={id:maxConvId+1,ingId:id,storageUnit:storageUnit,recipeUnit:ing.defUnit,factor:factor};
+                D.conversions.push(newConv);
+                changeLog.conversions.add(newConv.id);
+            }
+        }
+    }else{
+        // Remove conversion if unchecked
+        if(existingConvIdx>=0){
+            var convId=D.conversions[existingConvIdx].id;
+            D.conversions.splice(existingConvIdx,1);
+            deleteLog.conversions.add(convId);
+        }
+    }
+
     closeModal();
     render();
 }
